# geolipi

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml
docs/: conf.py  install.md
geolipi/: __init__.py
geolipi/geometry_nodes/: bl_utils.py  evaluate_graph.py  geonodes.py  materials.py  utils.py
geolipi/symbolic/: __init__.py  arg_types.py  base.py  color.py  combinators.py  primitives_2d.py  primitives_3d.py  primitives_higher.py  reference.py  registry.py  spec_coverage.py  symbol_types.py  transforms_2d.py  transforms_3d.py  type_system.md  variables.py
geolipi/torch_compute/: README.md  batch_compile.py  batch_evaluate_sdf.py  color_functions.py  colorspace_functions.py  compile_expression.py  constants.py  deprecated.py  evaluate_expression.py  maps.py  non_sdf_functions_2d.py  patched_functools.py  polycurve_2d.py  sdf_functions_2d.py  sdf_functions_3d.py  sdf_functions_higher.py  sdf_operators.py  settings.py  sketcher.py  sphere_marcher.py  sympy_to_torch.py  transforms.py  unroll_expression.py  visualizer.py
scripts/: blender_render_example.py  demo.py
